--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
       <section class="section-features">
         <div class="container features-container">
-          <h2 hidden>Studio</h2>
+          <h2 class="visually-hidden">Studio</h2>
           <ul class="features-list">
             <li class="features-iteam">
               <h3 class="features-titel">Strategy</h3>
@@ -108,8 +108,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-titel">Mark Guerrero</h3>
-              <p class="team-text">Product Designer</p>
+              <div class="worker">
+                <h3 class="team-titel">Mark Guerrero</h3>
+                <p class="team-text">Product Designer</p>
+              </div>
             </li>
 
             <li class="team-iteam">
@@ -119,8 +121,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-titel">Tom Ford</h3>
-              <p class="team-text">Frontend Developer</p>
+              <div class="worker">
+                <h3 class="team-titel">Tom Ford</h3>
+                <p class="team-text">Frontend Developer</p>
+              </div>
             </li>
 
             <li class="team-iteam">
@@ -130,8 +134,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-titel">Camila Garcia</h3>
-              <p class="team-text">Marketing</p>
+              <div class="worker">
+                <h3 class="team-titel">Camila Garcia</h3>
+                <p class="team-text">Marketing</p>
+              </div>
             </li>
 
             <li class="team-iteam">
@@ -141,8 +147,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-titel">Daniel Wilson</h3>
-              <p class="team-text">UI Designer</p>
+              <div class="worker">
+                <h3 class="team-titel">Daniel Wilson</h3>
+                <p class="team-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -159,8 +167,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-titel">Banking App</h3>
-              <p class="portfolio-text">App</p>
+              <div class="iteam-text">
+                <h3 class="portfolio-titel">Banking App</h3>
+                <p class="portfolio-text">App</p>
+              </div>
             </li>
             <li class="portfolio-iteam">
               <img
@@ -169,8 +179,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-titel">Cashless Payment</h3>
-              <p class="portfolio-text">Marketing</p>
+              <div class="iteam-text">
+                <h3 class="portfolio-titel">Cashless Payment</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-iteam">
               <img
@@ -179,8 +191,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-titel">Meditation App</h3>
-              <p class="portfolio-text">App</p>
+              <div class="iteam-text">
+                <h3 class="portfolio-titel">Meditation App</h3>
+                <p class="portfolio-text">App</p>
+              </div>
             </li>
             <li class="portfolio-iteam">
               <img
@@ -189,8 +203,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-titel">Taxi Service</h3>
-              <p class="portfolio-text">Marketing</p>
+              <div class="iteam-text">
+                <h3 class="portfolio-titel">Taxi Service</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-iteam">
               <img
@@ -199,8 +215,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-titel">Screen Illustrations</h3>
-              <p class="portfolio-text">Design</p>
+              <div class="iteam-text">
+                <h3 class="portfolio-titel">Screen Illustrations</h3>
+                <p class="portfolio-text">Design</p>
+              </div>
             </li>
 
             <li class="portfolio-iteam">
@@ -210,8 +228,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-titel">Online Courses</h3>
-              <p class="portfolio-text">Marketing</p>
+              <div class="iteam-text">
+                <h3 class="portfolio-titel">Online Courses</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
